appsetting configuration added

--- a/CouponFollowRecruitmentTask/appsettings.json
+++ b/CouponFollowRecruitmentTask/appsettings.json
@@ -2,6 +2,6 @@
   "BrowserConfiguration": {
     "BrowserType": "Chrome",
     "EnableMobile": true,
-    "EnabledDevice": "iPhone 12 Pro"
+    "DeviceName": "iPhone 12 Pro"
   }
 }
