mobile paths added

--- a/CouponFollowRecruitmentTask/appsettings.json
+++ b/CouponFollowRecruitmentTask/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BrowserConfiguration": {
     "BrowserType": "Chrome",
-    "EnableMobile": true,
+    "EnableMobile": false,
     "DeviceName": "iPhone 12 Pro"
   }
 }
