--- a/CouponFollowRecruitmentTask/appsettings.json
+++ b/CouponFollowRecruitmentTask/appsettings.json
@@ -3,5 +3,8 @@
     "BrowserType": "Chrome",
     "EnableMobile": false,
     "DeviceName": "iPhone 12 Pro"
+  },
+  "AppDetails": {
+    "Uri": "https://couponfollow.com"
   }
 }
